force-app/main/default/objects/OpportunityLineItem/fields/Customer_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Customer_Product_Code__c</fullName>
    <label>Customer Product Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>