force-app/main/default/objects/OpportunityLineItem/fields/UOM2__c.field-meta.xml
<CustomField>
    <fullName>UOM2__c</fullName>
    <label>UOM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>UOM</valueSetName>
    </valueSet>
</CustomField>